# cosmic-system-monitor

./: Cargo.toml  README.md  README.pt-BR.md  justfile
i18n/en/: cosmic_sys_monitor.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs
